[package]
name = "prusa_slicer_config_wizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11",  features = ["derive"] }
fast_config = { version = "1.1.3", features = ["yaml"] }
ini_core = "0.2.0"
serde = "1.0.195"
simple-home-dir = "0.2.1"
